syntax = "proto3";

import "common.proto";

package api;

service MiningService {
    rpc LeadTransactionMining(LeadMiningRequest) returns (LeadMiningResponse);
    rpc ConfirmTransactionValidation(ConfirmValidationRequest) returns (ConfirmValidationResponse);
}

message LeadMiningRequest {
    Transaction transaction = 1;
    int32 minimum_validations = 2;
    int64 timestamp = 3;
    string signature_request = 4;
}

message LeadMiningResponse {
    int64 timestamp = 1;
    string signature_response = 2;
}

message ConfirmValidationRequest {
    Transaction transaction = 1;
    MasterValidation master_validation = 2;
    int64 timestamp = 3;
    string signature_request = 4;
}

message ConfirmValidationResponse {
    Validation validation = 1;
    int64 timestamp = 2;
    string signature_response = 3;
}
